--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wagging Wheels</title>
-    <link rel="stylesheets" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <nav class="navbar">
-    <div class="logo"><img src="logo.png" alt="logo image of wagging wheels" width="200"/></div>
+    <div class="logo"><img src="logo.png" alt="logo"/></div>
 
     
 <ul class="navLinks">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#">HOME</a></li>
+    <li><a href="#">ABOUT</a></li>
+    <li><a href="#">CONTACT</a></li>
 </ul>
 
 </nav>
