--- a/about.html
+++ b/about.html
@@ -13,21 +13,84 @@
 
     
 <ul class="navLinks">
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="about.html">ABOUT</a></li>
-    <li><a href="#">CONTACT</a></li>
+    <li><a href="index.html" class="navbu">HOME</a></li>
+    <li><a href="about.html" class="navbu">ABOUT</a></li>
+    <li><a href="contact.html" class="navbu">CONTACT</a></li>
 </ul>
 
 </nav>
 
 
+<section class="about">
+
+<div class="text">
+<h1>About Us</h1>
+
+
+</div>
+
+
+<div class="imageContainer">
+    <img src="van.webp" alt="image of the company's van"/>
+</div>
+
+
+</section>
+
+<section class="aboutInfo">
+  <div class="info">
+
+    <h1 class="headings"> Our Mission & Vision</h1>
+    <hr>
+    <p> At Wagging Wheels, our mission is to ensure that no dog goes hungry by providing free pet food to families in need. We believe that financial struggles shouldn’t force pet owners to give up their beloved companions. Through our mobile pantry, we bring hope, nourishment, and relief directly to communities, keeping pets healthy and at home where they belong.</p>
+    <p>Our vision is a world where no pet suffers due to a lack of resources. We strive to expand our reach, partner with shelters and veterinarians, and create a future where every dog has access to proper nutrition and care—regardless of their owner’s circumstances.</p>
+
+    <br> 
+    <br>
+
+    <h1 class="headings">Founding Story</h1>
+    <hr>
+    <p>Wagging Wheels was founded by a group of passionate animal lovers who saw too many families forced to surrender their dogs due to financial hardship. After volunteering at shelters and witnessing firsthand how a simple lack of food led to heartbreaking separations, we knew something had to change.</p>
+    <p>What started as a small community effort—distributing donated dog food out of our cars—quickly grew into a fully operational mobile pantry. With the help of generous donors and dedicated volunteers, Wagging Wheels now delivers essential supplies directly to pet owners in need, ensuring that no dog goes without food, comfort, or care.</p>
+
+    <br>
+    <br>
+
+    <h1 class="headings">Meet the Team</h1>
+    <hr>
+</div>
+
+
+<div class="meetteam">
+
+    <div class="teammember">
+        <img src="profile1.svg" alt="headshot of sabrina lopez">
+        <h3 class="name">Sabrina Lopez</h3>
+        <p class="role">Founder & Executive Director</p>
+    </div>
+    <br> 
+    <div class="teammember">
+        <img src="profile2.svg" alt="headshot of marcus reed">
+        <h3 class="name">Marcus Reed</h3>
+        <p class="role">Operations & Logistics Manager</p>
+    </div>
+    <br> 
+    <div class="teammember">
+        <img src="profile3.svg" alt="headshot of emily carter">
+        <h3 class="name">Emily Carter</h3>
+        <p class="role">Community Outreach Coordinator</p>
+    </div>
+    
+
+
+</section>
 
 <footer class="footer">
-    <p>&copy; 2025 Wagging Wheels. All rights reserved.</p>
+    <p>&copy; 2025 Wagging Wheels. All rights reserved. Powered by <a href="https://github.com/dianamontero7">dianamontero7 </a></p>
 </footer>
 
 
 
-<script src="script.js"></script>
+
 </body>
 </html>
