--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul class="navLinks">
     <li><a href="index.html">HOME</a></li>
     <li><a href="about.html">ABOUT</a></li>
-    <li><a href="#">CONTACT</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 
 </nav>
@@ -29,7 +29,7 @@
 </section>
 
 <footer class="footer">
-    <p>&copy; 2025 Wagging Wheels. All rights reserved.</p>
+    <p>&copy; 2025 Wagging Wheels. All rights reserved. Powered by <a href="https://github.com/dianamontero7">dianamontero7 </a></p>
 </footer>
 
 <script src="script.js"></script>
